Fixed issue with the determineOutcome function by changing a global variable to a local variable.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
                 <div class="col-md-10 col-sm-12">   
 
-                    <span id="crystal-one"> <img src="./assets/images/crystal1.jpeg" class="crystals"> </span>
-                    <span id="crystal-two"> <img src="./assets/images/crystal2.jpeg" class="crystals"> </span>
-                    <span id="crystal-three"> <img src="./assets/images/crystal3.jpeg" class="crystals"> </span>
-                    <span id="crystal-four"> <img src="./assets/images/crystal4.jpeg" class="crystals"> </span>
+                    <span id="purple"> <img src="./assets/images/crystal1.jpeg" class="crystals"> </span>
+                    <span id="peach"> <img src="./assets/images/crystal2.jpeg" class="crystals"> </span>
+                    <span  id="green"> <img src="./assets/images/crystal3.jpeg" class="crystals"> </span>
+                    <span id="red"> <img src="./assets/images/crystal4.jpeg" class="crystals"> </span>
                 </div>
                 <div class="col-md-1 col-sm-12">
                 </div>  
@@ -99,7 +99,7 @@
     <!-- Script -->
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
-    <script type="text/javascript" src="./assets/javascript/game2.js"></script>
+    <!-- <script type="text/javascript" src="./assets/javascript/game2.js"></script> -->
 
   </body>
 
